home 3 sec spacing issue fix

--- a/css/style.css
+++ b/css/style.css
@@ -9827,7 +9827,7 @@ ul.children {
     overflow: hidden; }
 
 .home-three-why-choose-us {
-  padding-top: 142px;
+  padding-top: 144px;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat; }
@@ -9848,7 +9848,7 @@ ul.children {
         padding-left: 0; } }
 
 .home-three-about-us-area {
-  padding-top: 135px;
+  padding-top: 140px;
   padding-bottom: 144px; }
   @media (max-width: 991px) {
     .home-three-about-us-area {
@@ -9864,8 +9864,8 @@ ul.children {
   background-position: center center; }
 
 .home-three-project-area {
-  padding-top: 136px;
-  padding-bottom: 135px; }
+  padding-top: 140px;
+  padding-bottom: 134px; }
   @media (max-width: 991px) {
     .home-three-project-area {
       padding-top: 100px;
@@ -9876,7 +9876,7 @@ ul.children {
       padding-bottom: 40px; } }
 
 .home-three-blog-post-area {
-  padding-top: 142px;
+  padding-top: 140px;
   padding-bottom: 81px; }
   @media (max-width: 991px) {
     .home-three-blog-post-area {
@@ -9892,7 +9892,7 @@ ul.children {
   background-size: cover;
   background-position: center center;
   padding-top: 140px;
-  padding-bottom: 145px; }
+  padding-bottom: 144px; }
   @media (max-width: 991px) {
     .home-three-pricing-area {
       padding-top: 100px;
@@ -9909,8 +9909,8 @@ ul.children {
       padding: 0 12px; } }
 
 .home-three-our-service-area {
-  padding-top: 137px;
-  padding-bottom: 88px; }
+  padding-top: 140px;
+  padding-bottom: 92px; }
   @media (max-width: 991px) {
     .home-three-our-service-area {
       padding-top: 100px;
@@ -9926,7 +9926,7 @@ ul.children {
 
 .home-three-accordion-area {
   padding-top: 212px;
-  padding-bottom: 145px; }
+  padding-bottom: 140px; }
   @media (max-width: 1199px) {
     .home-three-accordion-area {
       padding: 100px 0; } }
@@ -9939,8 +9939,8 @@ ul.children {
       padding-bottom: 80px; } }
 
 .home-three-testimonial-area {
-  padding-top: 144px;
-  padding-bottom: 128px; }
+  padding-top: 140px;
+  padding-bottom: 134px; }
   @media (max-width: 991px) {
     .home-three-testimonial-area {
       padding: 100px 0; } }
